# NGSNet

./: .gitignore  README.md  SalObjDataset.py  WaveNetEnvCopy.yml  args.json  cmd.txt  cp_param_cfg.ipynb  custom_transforms.py  dataset  distributed.py  gd_distributed.py  gradcam_unet.py  inference.ipynb  inference.py  loss.py  pyproject.toml  requirements.txt  rgbdt_dataset.py  saliency_metric.py  same_shape_sampler.py  test.py  train.py  utils.py
configs/pool/: pool_m48_patch4_224.yaml  pool_s24_patch4_224.yaml  pool_s36_patch4_224.yaml
configs/segresnet/: segresnet-101.yaml
configs/segswin/: swin_base_patch4_window12_384_22kto1k_finetune.yaml  swin_small_patch4_window7_224_22k.yaml
configs/swin/: swin_tiny_patch4_window7_224_22k.yaml
configs/swinmlp/: swin_mlp_base_patch4_window7_224.yaml
configs/swinmoe/: swin_moe_base_patch4_window12_192_8expert_32gpu_22k.yaml
networks/: ConvNeXt.py  DFormer.py  EdgeAwareToolBox.py  GSformer.py  MFusionToolBox.py  PoolNets.py  SwinNets.py  Wavenet.py  models_config.py  seg_swin_transformer.py  segswin.py  swin_mlp.py  swin_transformer.py  swin_transformer_v2.py  wavemlp.py
pretrained/: ckpts
pretrained/configs/convnext/: convnext.yaml
pretrained/configs/convnextv2/: convnextv2_base_fcmae_ft_in22k_in1k_384.yaml  convnextv2_nano_fcmae_ft_in22k_in1k_384.yaml  convnextv2_tiny_fcmae_ft_in22k_in1k_384.yaml
pretrained/configs/mobilenet/: mobilenetv2.yaml
pretrained/configs/pool/: pool_m36_patch4_224.yaml
pretrained/configs/resnet/: resnet101.yaml  resnet152.yaml  resnet50.yaml
scripts/: run_dist.sh  send_pred.sh
(+5 files in other folders)
