[project]
name = "ngsnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.8.2",
    "imageio>=2.37.3",
    "matplotlib>=3.10.8",
    "nvitop>=1.6.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "pytorch-wavelets>=1.3.0",
    "pywavelets>=1.8.0",
    "scipy>=1.15.3",
    "setuptools<70",
    "tensorboard>=2.20.0",
    "timm>=1.0.26",
    "torch==2.1.2",
    "torchaudio==2.1.2",
    "torchvision==0.16.2",
    "yacs>=0.1.8",
]

[[tool.uv.index]]
url = "https://pypi.mirrors.ustc.edu.cn/simple/"
default = true
